--- a/index.html
+++ b/index.html
@@ -1,1 +1,13 @@
 <!-- Your code here -->
+<!DOCTYPE html>
+<!-- Hello -->
+<html lang="en">
+        <head>
+            <link rel="stylesheet" type="text/css" href="style.css">
+            <title>My Site Title</title>
+        </head>
+
+        <body>
+            Page Body
+        </body>
+</html>
